--- a/vite-project/src/components/Header/header.css
+++ b/vite-project/src/components/Header/header.css
@@ -21,6 +21,12 @@ color: aliceblue;
   margin: 0;
   padding: 0;
 }
+.internaraper ul :hover{
+  /*background-color: aqua;*/
+  cursor: pointer;
+  background-color: transparent;
+
+}
 
 /* Right section */
 .rightimage ul {
